<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NewApi" >

    <Button
        android:id="@+id/vocabularyTranslationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/vocabulary"
        android:onClick="goToVocabulary" />

    <Button
        android:id="@+id/verbsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vocabularyTranslationButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/verbs"
        android:onClick="goToVerbs" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verbsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/admin"
        android:onClick="goToAdmin" />

    <Button
        android:id="@+id/aboutButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/question"
        android:onClick="showAbout" />

</RelativeLayout>
