<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NewApi" >

    <TextView
        android:id="@+id/spanishTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spanishText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/spanish_text" />
    
    <EditText
        android:id="@+id/spanishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spanishTextLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/greekTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spanishText"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/spanishText"
        android:layout_marginTop="20dp"
        android:text="@string/greek_text" />

    <EditText
        android:id="@+id/greekText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/greekTextLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textNoSuggestions" >
    </EditText>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spanishText"
        android:layout_below="@id/greekText"
        android:layout_marginTop="20dp"
        android:text="@string/select_category" />

    <Spinner
        android:id="@+id/vocabularyCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/greekText"
        android:layout_alignRight="@id/greekText"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:prompt="@string/select_category" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/vocabularyCategories"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/vocabularyCategories"
        android:layout_marginTop="35dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelButton"
        android:layout_alignRight="@id/vocabularyCategories"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cancelButton"
        android:layout_below="@+id/cancelButton"
        android:layout_marginTop="35dp"
        android:text="@string/delete"
        android:onClick="deleteVocabularyEntry"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spanishText"
        android:layout_alignBottom="@+id/spanishText"
        android:layout_toRightOf="@+id/spanishText"
        android:onClick="recognizeSpanishText"
        android:text="\?" />

</RelativeLayout>
